--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
     overflow: scroll;
     width: 100%;
     height: 100px;
+    padding: 10px 0;
 }
 .description::-webkit-scrollbar{
     width: 0;
